[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/Play.gd" type="Script" id=1]
[ext_resource path="res://assets/png/hb.png" type="Texture" id=2]
[ext_resource path="res://assets/png/icon.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Montserrat-SemiBold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/png/pb.png" type="Texture" id=5]
[ext_resource path="res://scripts/misc/Pause.gd" type="Script" id=6]
[ext_resource path="res://assets/png/pause.png" type="Texture" id=7]
[ext_resource path="res://assets/png/btn.png" type="Texture" id=8]
[ext_resource path="res://assets/fonts/Montserrat-Bold.ttf" type="DynamicFontData" id=9]

[sub_resource type="Environment" id=1]
background_mode = 4
background_canvas_max_layer = 10
fog_sun_amount = 0.71
ssao_radius = 7.24
ssao_intensity = 128.0
glow_enabled = true
glow_intensity = 1.0
glow_strength = 1.05
glow_bloom = 0.01
glow_blend_mode = 1
glow_bicubic_upscale = true
glow_high_quality = true

[sub_resource type="DynamicFont" id=3]
size = 56
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 56
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 9 )

[node name="Play" type="Node2D"]
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="BG" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.215686, 0.215686, 0.215686, 1 )

[node name="Wrapper" type="Node2D" parent="."]
position = Vector2( 0, 540 )

[node name="Strums" type="Node2D" parent="Wrapper"]
position = Vector2( 960, 0 )

[node name="Orbs" type="Node2D" parent="Wrapper"]
position = Vector2( 960, 0 )

[node name="MirrorOrbs" type="Node2D" parent="Wrapper"]
position = Vector2( 960, 0 )

[node name="Borders" type="Node2D" parent="."]
visible = false

[node name="B1" type="ColorRect" parent="Borders"]
margin_left = -16.0
margin_right = 16.0
margin_bottom = 1080.0
color = Color( 1, 1, 1, 0.392157 )

[node name="B2" type="ColorRect" parent="Borders"]
margin_left = 464.0
margin_right = 496.0
margin_bottom = 1080.0
color = Color( 1, 1, 1, 0.392157 )

[node name="B3" type="ColorRect" parent="Borders"]
margin_left = 944.0
margin_right = 976.0
margin_bottom = 1080.0
color = Color( 1, 1, 1, 0.392157 )

[node name="B4" type="ColorRect" parent="Borders"]
margin_left = 1424.0
margin_right = 1456.0
margin_bottom = 1080.0
color = Color( 1, 1, 1, 0.392157 )

[node name="B5" type="ColorRect" parent="Borders"]
margin_left = 1904.0
margin_right = 1936.0
margin_bottom = 1080.0
color = Color( 1, 1, 1, 0.392157 )

[node name="HB" type="Node2D" parent="."]
modulate = Color( 1.15, 1.15, 1.15, 1 )
position = Vector2( 130, 69 )

[node name="BG" type="ColorRect" parent="HB"]
margin_top = 10.0
margin_right = 60.0
margin_bottom = 620.0
color = Color( 1, 0.501961, 0.376471, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Bar" type="ColorRect" parent="HB"]
margin_top = 10.0
margin_right = 60.0
margin_bottom = 620.0
color = Color( 0.501961, 0.501961, 1, 1 )

[node name="Outline" type="Sprite" parent="HB"]
modulate = Color( 0.882353, 0.882353, 0.882353, 1 )
texture = ExtResource( 2 )
centered = false

[node name="Icon" type="Sprite" parent="."]
position = Vector2( 1728, 192 )
texture = ExtResource( 3 )

[node name="Prog" type="Node2D" parent="."]
position = Vector2( 1582, 384 )

[node name="BG" type="Sprite" parent="Prog"]
modulate = Color( 1.05, 1.05, 1.05, 1 )
position = Vector2( -5, -5 )
texture = ExtResource( 5 )
centered = false

[node name="Bar" type="ColorRect" parent="Prog"]
modulate = Color( 1.15, 1.15, 1.15, 1 )
margin_left = 5.0
margin_top = 5.0
margin_right = 5.0
margin_bottom = 27.0
color = Color( 0.635294, 0.752941, 1, 1 )

[node name="MissCounter" type="Label" parent="."]
margin_left = 1560.0
margin_top = 448.0
margin_right = 1920.0
margin_bottom = 518.0
custom_fonts/font = SubResource( 3 )
text = "Misses:"

[node name="MetaWrapper" type="Node2D" parent="."]
position = Vector2( 682, 0 )

[node name="Title" type="Label" parent="MetaWrapper"]
modulate = Color( 1, 1.2, 1.4, 1 )
margin_left = 1240.0
margin_top = 785.0
margin_right = 1880.0
margin_bottom = 977.0
custom_fonts/font = SubResource( 4 )
align = 2
valign = 2
autowrap = true

[node name="Artist" type="Label" parent="MetaWrapper"]
modulate = Color( 1, 1.2, 1.4, 1 )
margin_left = 1239.0
margin_top = 977.0
margin_right = 1880.0
margin_bottom = 1080.0
custom_fonts/font = SubResource( 2 )
text = "by
"
align = 2

[node name="Pause" type="Node2D" parent="."]
pause_mode = 2
position = Vector2( 1, 0 )
script = ExtResource( 6 )

[node name="Overlay" type="Node2D" parent="Pause"]
visible = false

[node name="BG" type="ColorRect" parent="Pause/Overlay"]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.392157 )

[node name="Btn" type="Sprite" parent="Pause/Overlay"]
position = Vector2( 960, 540 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="Pause/Overlay/Btn"]
margin_left = -202.0
margin_top = -74.0
margin_right = 202.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 5 )
text = "MENU"
align = 1
valign = 1

[node name="PCLabel" type="Label" parent="Pause/Overlay"]
visible = false
margin_left = 741.0
margin_top = 594.0
margin_right = 1180.0
margin_bottom = 742.0
custom_fonts/font = SubResource( 5 )
text = "Press Escape"
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="Pause"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 1600, 544 )
texture = ExtResource( 7 )
centered = false

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Tween" type="Tween" parent="."]
